@@ -1,5 +1,7 @@
 2006-12-19  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/munged.8.in: Tweaked docs for --group-update-time.
+
 	* src/munged/conf.c:
 	  Added --check-group-mtime and --group-update-time.
 	* src/munged/munged.8.in:
